--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,60 @@
-setuptools==75.1.0
+altgraph==0.17.4
+anyio==4.6.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+certifi==2024.8.30
+click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
+fastcore==1.7.9
+fastlite==0.0.11
+filelock==3.16.1
+Flask==3.0.3
+fonttools==4.54.1
+fsspec==2024.9.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.7
+macholib==1.16.3
+MarkupSafe==2.1.5
 matplotlib==3.9.2
+mpld3==0.5.10
+mpmath==1.3.0
+networkx==3.3
 numpy==1.26.4
-opencv_python==4.10.0.84
-opencv_python_headless==4.10.0.84
+oauthlib==3.2.2
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+packaging==24.1
+pillow==10.4.0
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-segment_anything==1.0
-Shapely==2.0.5
+python-fasthtml==0.6.9
+python-multipart==0.0.10
+PyYAML==6.0.2
+segment-anything==1.0
+setuptools==75.1.0
+shapely==2.0.5
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+sqlite-minutils==3.37.0.post3
+starlette==0.39.1
+sympy==1.3.0
 torch==2.4.1
 torchvision==0.19.1
-mpld3==0.5.10
 tornado==6.4.1
-python-fasthtml==0.6.9
+typing_extensions==4.12.2
+uvicorn==0.30.6
+uvloop==0.20.0
+watchfiles==0.24.0
+websockets==13.1
+Werkzeug==3.0.4
